# saferfd

./: CMakeLists.txt  LICENSE  README.md
example/: main.cpp
source/: SaferFD.cpp  SaferFD.h
test/: testSaferFd.cpp
